--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+  font-family: HakgyoansimWoojuR;
+  src: url("./fonts/HakgyoansimWoojuR.ttf");
+}
+@font-face {
+  font-family: GOSEONGGEUMGANGNURI;
+  src: url("./fonts/GOSEONGGEUMGANGNURI.ttf");
+}
